--- a/OnlineStore/Areas/Admin/Views/Product/Edit.cshtml
+++ b/OnlineStore/Areas/Admin/Views/Product/Edit.cshtml
@@ -19,7 +19,7 @@
 				</div>
 				<div class="mb-3 row p-1">
 					<label asp-for="Brand">Brand:</label>
-					<input asp-for="Brand" type="Number" class="form-control" /><br />
+					<input asp-for="Brand" type="text" class="form-control" /><br />
 					<span asp-validation-for="Brand" class="text-danger"></span>
 				</div>
 				<div class="mb-3 row p-1">
