--- a/OnlineStore/Views/_ViewImports.cshtml
+++ b/OnlineStore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OnlineStore
 @using OnlineStore.Models
+@using OnlineStore.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
