--- a/OnlineStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/OnlineStore/Areas/Admin/Views/Product/Index.cshtml
@@ -1,71 +1,39 @@
 ﻿@model List<Product>
 
-    <div class="container">
-        <div class="row pt-4 pb-5">
-            <div class="col-6 ">
-                <h2 class="text-primary">Product List</h2>
-            </div>
-            <div class="col-6 text-end">
-                <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
-                <i class="bi bi-plus-circle me-2"></i>Create New Product
-                </a>
-            </div>
-        </div>
-    </div>
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>
-                Product Name
-            </th>
-            <th>
-                Brand
-            </th>
-            <th>
-                Product Description
-            </th>
-            <th>
-                Price
-            </th>
-            <th>
-                Category
-            </th>
-            <th class="text-center">
-                Actions
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var obj in Model)
-        {
-            <tr>
-                <td>
-                    @obj.Title
-                </td>
-                <td>
-                    @obj.Brand
-                </td>
-                <td>
-                    @obj.Description
-                </td>
-                <td>
-                    @obj.Price
-                </td>
-                <td>
-                    @obj.Category.CategoryName
-                </td>
-                <td>
-                    <div class="w-100 btn-group" role="group">
-                        <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.ProductId" class="btn btn-primary mx-2">
-                            <i class="bi bi-pencil-square"></i>Edit
-                        </a>
-                        <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.ProductId" class="btn btn-danger mx-2">
-                            <i class="bi bi-trash3"></i>Delete
-                        </a>
-                    </div>
-                </td>
-            </tr>
-        }
-    </tbody>
-    
-</table>
+<div class="container">
+	<div class="row pt-4 pb-5">
+		<div class="col-6 ">
+			<h2 class="text-primary">Product List</h2>
+		</div>
+		<div class="col-6 text-end">
+			<a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
+				<i class="bi bi-plus-circle me-2"></i>Create New Product
+			</a>
+		</div>
+	</div>
+
+	<table id="tblData" class="table table-bordered table-striped">
+		<thead>
+			<tr>
+				<th>
+					Product Name
+				</th>
+				<th>
+					Brand
+				</th>
+				<th>
+					Price
+				</th>
+				<th>
+					Category
+				</th>
+				<th>
+				</th>
+			</tr>
+		</thead>
+	</table>
+</div>
+
+@section Scripts{
+	<script src="~/js/product.js"></script>
+}
