--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="~/OnlineStore.styles.css" asp-append-version="true" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+	<link rel="stylesheet" href="//cdn.datatables.net/2.3.0/css/dataTables.dataTables.min.css" />
 </head>
 <body>
 	<header>
@@ -65,6 +66,8 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="//cdn.datatables.net/2.3.0/js/dataTables.min.js" asp-append-version="true"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="https://cdn.tiny.cloud/1/ytrezebj70yctw509j95nfb9uak391f11yote3t37q7495jl/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
 
 	@await RenderSectionAsync("Scripts", required: false)
