--- a/OnlineStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/OnlineStore/Areas/Customer/Views/Home/Index.cshtml
@@ -4,35 +4,40 @@
 	@foreach (var product in Model)
 	{
 		<div class=" col-lg-3 col-sm-6">
-			<div class="row p-2">
-				<div class="col-12 p-1">
-					<div class="card border-0 p-3 shadow border-top border-5 rounded">
-						<img src="@product.ImageUrl" class="card-img-top rounded " />
-						<div class="card-body pb-0">
-
-							<p class="card-title h5 text-dark opacity-75 text-bg-dangertext-uppercase text-center">@product.Title</p>
-							<p class="card-title text-warning text-center">Brand:@product.Brand</p>
+			
+				<div class="card border-0 h-100 p-3 w-100 shadow border-top border-5 rounded">
+					<div class=" w-100 " style="height:216px">
+						<img src="@product.ImageUrl" class="card-img-top rounded h-100 object-fit-cover " />
 						</div>
-						<div class="pl-1">
-
-							<p class=" text-dark text-opacity-75 text-center">Price:@product.Price$</p>
-
-						</div>
-						<div>
-							<a asp-controller="Home" asp-action="Details"
-							 asp-route-productId="@product.ProductId "
-							class="btn btn-primary bg-gradient border-0 form-control">
-								Details
-							</a>
-						</div>
-					</div>
 					
-				</div> 
+					<div class=" h-25 w-100">
+
+					<div class="card-body pb-0">
+
+						<p class="card-title h5 text-dark opacity-75 text-bg-dangertext-uppercase text-center text-truncate">@product.Title</p>
+						<p class="card-title text-warning text-center">Brand:@product.Brand</p>
+					</div>
+					<div class="pl-1">
+
+						<p class=" text-dark text-opacity-75 text-center">Price:@product.Price$</p>
+
+					</div>
+					<div>
+						<a asp-controller="Home" asp-action="Details"
+						   asp-route-productId="@product.ProductId "
+						   class="btn btn-primary bg-gradient border-0 form-control">
+							Details
+						</a>
+					</div>
+					</div>
+				</div>
+
+
 
 
 
 			</div>
-		</div>
+	
 	}
 
 
