--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -22,12 +22,12 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav flex-grow-1">
+					<ul class="navbar-nav me-auto">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
+							<a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
+							<a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
 						
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,10 +35,10 @@
 							</a>
 							<ul class="dropdown-menu text-dark">
 								<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+							<a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
 						</li>
 								<li class="nav-item">
-									<a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+									<a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
 								</li>
 								
 								<li><hr class="dropdown-divider"></li>
@@ -46,7 +46,7 @@
 							</ul>
 						</li>
 					</ul>
-					
+					 <partial name="_LoginPartial" />
 				</div>
 			</div>
 		</nav>
